--- a/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
+++ b/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
@@ -1,15 +1,15 @@
 <!-- Brand Logo -->
 <a [routerLink]="['/']" class="brand-link">
     <pf-image
-        src="assets/img/logo.png"
-        alt="AdminLTE Logo"
+        src="assets/img/onlinestore.png"
+        alt="onlinestore Logo"
         class="brand-image"
         height="33"
         width="33"
         rounded
         style="opacity: 0.8"
     ></pf-image>
-    <span class="brand-text font-weight-light">AdminLTE 3</span>
+    <span class="brand-text font-weight-light">Online Store</span>
 </a>
 
 <!-- Sidebar -->
