--- a/src/app/modules/forgot-password/forgot-password.component.html
+++ b/src/app/modules/forgot-password/forgot-password.component.html
@@ -1,6 +1,12 @@
 <div class="card card-outline card-primary">
     <div class="card-header text-center">
-        <a [routerLink]="['/']" class="h1"><b>Admin</b>LTE</a>
+        <a [routerLink]="['/']" class="h1"
+            ><img
+                src="../../../assets/img/onlinestore.png"
+                alt="onlinestore"
+                width="60px"
+            /><b> Online </b>Store</a
+        >
     </div>
     <div class="card-body">
         <p class="login-box-msg">
