--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -45,9 +45,9 @@
                 <!-- small box -->
                 <div class="small-box bg-success">
                     <div class="inner">
-                        <h3>53<sup style="font-size: 20px">%</sup></h3>
+                        <h3>53</h3>
 
-                        <p>Bounce Rate</p>
+                        <p>Products</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-stats-bars"></i>
@@ -64,10 +64,10 @@
                     <div class="inner">
                         <h3>44</h3>
 
-                        <p>User Registrations</p>
+                        <p>Items in cart</p>
                     </div>
                     <div class="icon">
-                        <i class="ion ion-person-add"></i>
+                        <i class="ion ion-bag"></i>
                     </div>
                     <a href="#" class="small-box-footer"
                         >More info <i class="fas fa-arrow-circle-right"></i
@@ -79,9 +79,9 @@
                 <!-- small box -->
                 <div class="small-box bg-danger">
                     <div class="inner">
-                        <h3>65</h3>
+                        <h3>5</h3>
 
-                        <p>Unique Visitors</p>
+                        <p>Product Categories</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-pie-graph"></i>
